# tui-launcher

./: .gitignore  CHANGELOG.md  Makefile  README.md  shell.nix  tui-launcher.cabal  tuilauncher.cabal
.github/workflows/: ci.yml
app/: Main.hs
scripts/: generate-snapshots.sh  release.sh
src/TUILauncher/: App.hs  Config.hs  Themes.hs  Types.hs  UI.hs
src/TuiLauncher/: App.hs  Config.hs  Themes.hs  Types.hs  UI.hs
test/: Main.hs
