cabal-version: 3.8
name: tui-launcher
version: 0.0.1
build-type: Simple
license: MIT
license-file: LICENSE
author: tritlo
maintainer: tritlo
copyright: 2026 tritlo
synopsis: Small Brick-based terminal launcher
description:
  @tui-launcher@ is a small terminal launcher built with @brick@.
  .
  It reads a TOML config file, shows entries as a keyboard- and mouse-driven
  tile menu, and replaces itself with the selected command.
  .
  Features include:
  .
  * TOML configuration with auto-created default config
  * Per-entry @working-dir@, @shell-program@, @shell-login@, and @color@
  * Arrow-key and @hjkl@ navigation
  * Mouse selection and scrolling
  * Configurable tile width, height, and spacing

homepage: https://github.com/TharkunAB/tui-launcher
bug-reports: https://github.com/TharkunAB/tui-launcher/issues
tested-with: ghc ==9.12.2
category: Console
extra-doc-files:
  CHANGELOG.md
  README.md
  docs/screenshots/github-dark-square.png
  docs/screenshots/github-dark-vertical.png
  docs/screenshots/github-light-square.png
  docs/screenshots/github-light-vertical.png

source-repository head
  type: git
  location: https://github.com/TharkunAB/tui-launcher.git

common warnings
  ghc-options: -Wall
  default-language: GHC2021
  default-extensions:
    BlockArguments
    LambdaCase
    OverloadedStrings
    RecordWildCards
    TypeApplications

executable tui-launcher
  import: warnings
  ghc-options: -threaded
  main-is: Main.hs
  hs-source-dirs:
    app
    src

  other-modules:
    TuiLauncher.App
    TuiLauncher.Config
    TuiLauncher.Themes
    TuiLauncher.Types
    TuiLauncher.UI

  build-depends:
    base >=4.21 && <5,
    brick >=2.10 && <2.11,
    containers >=0.7 && <0.8,
    directory >=1.3 && <1.4,
    filepath >=1.5 && <1.6,
    optparse-applicative >=0.19 && <0.20,
    process >=1.6 && <1.7,
    text >=2.1 && <2.2,
    tomland >=1.3 && <1.4,
    unix >=2.8 && <2.10,
    vty >=6.5 && <6.6,
    vty-crossplatform >=0.5 && <0.6,

test-suite tui-launcher-test
  import: warnings
  ghc-options: -threaded
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    test
    src

  build-tool-depends:
    tui-launcher:tui-launcher

  other-modules:
    TuiLauncher.App
    TuiLauncher.Config
    TuiLauncher.Themes
    TuiLauncher.Types
    TuiLauncher.UI

  build-depends:
    base >=4.21 && <5,
    brick >=2.10 && <2.11,
    containers >=0.7 && <0.8,
    directory >=1.3 && <1.4,
    filepath >=1.5 && <1.6,
    optparse-applicative >=0.19 && <0.20,
    process >=1.6 && <1.7,
    tasty >=1.5 && <1.6,
    tasty-hunit >=0.10 && <0.12,
    text >=2.1 && <2.2,
    tomland >=1.3 && <1.4,
    tuispec >=0.2 && <0.3,
    unix >=2.8 && <2.10,
    vty >=6.5 && <6.6,
    vty-crossplatform >=0.5 && <0.6,
